--- a/.github/workflows/nuget-push-public-windows.yml
+++ b/.github/workflows/nuget-push-public-windows.yml
@@ -16,7 +16,7 @@ jobs:
         run:  |
           git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
           cd Authentications-Microservice
-          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj | tee output.txt &
+          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj --framework net8.0 | tee output.txt &
           AUTH_PID=$!
           echo "Started Authentication Service with PID $AUTH_PID"
           cd ..
@@ -32,7 +32,7 @@ jobs:
         run: |
           git clone https://github.com/EasyMicroservices/WhiteLabels-Microservice.git
           cd WhiteLabels-Microservice
-          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj | tee output.txt &
+          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj --framework net8.0 | tee output.txt &
           WHITELABEL_PID=$!
           echo "Started WhiteLabel Service with PID $WHITELABEL_PID"
           cd ..
