--- a/.github/workflows/nuget-push-public-windows.yml
+++ b/.github/workflows/nuget-push-public-windows.yml
@@ -16,15 +16,12 @@ jobs:
         run:  |
           git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
           cd Authentications-Microservice
-          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj --framework net8.0 | tee output.txt &
+          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj --framework net8.0 | tee >(awk '/Now listening on/ {print;exit}') &
           AUTH_PID=$!
           echo "Started Authentication Service with PID $AUTH_PID"
           cd ..
-          while true; do
-              grep -q 'Now listening on' output.txt && break
-              sleep 10
-          done
-
+          
+          wait $AUTH_PID
           echo "Authentication Service started successfully"
         shell: bash
 
@@ -32,15 +29,12 @@ jobs:
         run: |
           git clone https://github.com/EasyMicroservices/WhiteLabels-Microservice.git
           cd WhiteLabels-Microservice
-          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj --framework net8.0 | tee output.txt &
+          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj --framework net8.0 | tee >(awk '/Now listening on/ {print;exit}') &
           WHITELABEL_PID=$!
           echo "Started WhiteLabel Service with PID $WHITELABEL_PID"
           cd ..
-          while true; do
-              grep -q 'Now listening on' output.txt && break
-              sleep 10
-          done
-
+          
+          wait $WHITELABEL_PID
           echo "WhiteLabels Service started successfully"
         shell: bash
       - name: Restore dependencies
