Add support for Widget, Reporting Widget only for add #157

--- a/src/CSharp/EasyMicroservices.Cores.Database/EasyMicroservices.Cores.Database.csproj
+++ b/src/CSharp/EasyMicroservices.Cores.Database/EasyMicroservices.Cores.Database.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EasyMicroservices.Cores.Contracts\EasyMicroservices.Cores.Contracts.csproj" />
+    <ProjectReference Include="..\EasyMicroservices.Cores.Infrastructure\EasyMicroservices.Cores.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
